--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sauravghosal.github.io/personal-website",
+  "homepage": "http://sauravghosal.github.io/personal-blog",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
@@ -26,7 +26,7 @@
     "react-mdl": "^1.11.0",
     "react-multi-carousel": "^2.5.5",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router-dom": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
