--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flickity": "^2.2.1",
     "infinite-react-carousel": "^1.2.11",
     "mdbreact": "^4.21.0",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "mongoose": "^5.7.4",
     "nodemon": "^1.19.3",
     "pure-react-carousel": "^1.24.1",
