--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "bson-objectid": "^1.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flickity": "^2.2.1",
     "infinite-react-carousel": "^1.2.11",
     "mdbreact": "^4.21.0",
+    "mongodb": "^3.5.7",
     "mongodb-stitch-browser-sdk": "^4.8.0",
     "mongoose": "^5.7.4",
     "nodemon": "^1.19.3",
     "pure-react-carousel": "^1.24.1",
+    "query-string": "^6.12.1",
     "react": "^16.10.0",
     "react-animated-slider": "^2.0.0",
     "react-axios": "^2.0.3",
